--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "api-server": "node api-server.js",
     "api-server:dev": "nodemon api-server.js",
     "dev": "npm-run-all --parallel spa api-server:dev",
-    "prod": "npm-run-all --parallel server api-server",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "prod": "npm-run-all --parallel server api-server"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
